design complete html file

--- a/index.html
+++ b/index.html
@@ -12,6 +12,44 @@
             <h3 class="navbar-brand m-auto">Product Catalog</h3>
             <input type="text" name="filter" id="filter" class="form-control m-3" placeholder="Filter here.........">
         </nav>
+        <div class="card card-body">
+            <ul class="list-group" id="list-group">
+                <li class="list-group-item" id="list-item">
+                    <strong>Mircrophone</strong>
+                    <span>-$30</span>
+                    <span class="float-right text-danger">X</span>
+                </li>
+            </ul>
+            <form class="mt-4"> 
+                <div class="row">
+                    <div class="col">
+                        <input type="text" placeholder="Product Name" class="form-control" id="product_name">
+                    </div>
+                    <div class="col">
+                        <input type="text" placeholder="Product Price" class="form-control" id="product_price">
+                    </div>
+                </div>
+            </form>
+            <button class="btn btn-primary mt-2" id="btn-submit">Submit</button>
+            <div class="card card-body mt-5">
+                <div class="row">
+                    <div class="col">
+                        <strong class="float-right">Choose Theme</strong>
+                    </div>
+                    <div class="col">
+                        <span style="background-color: #3E362F; border-radius: 6px;"><input class="radio-inline m-2" type="radio" name="inlineRadioOptions" id="radioOne" value="option1"></span>
+                        <span style="background-color: #A16F5C; border-radius: 6px;"><input class="radio-inline m-2" type="radio" name="inlineRadioOptions" id="radioTwo" value="option2"></span>
+                        <span style="background-color: #D5EBDA; border-radius: 6px;"><input class="radio-inline m-2" type="radio" name="inlineRadioOptions" id="radioThree" value="option3"></span>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <div class="footer bg-dark" style="height: 150px;">
+            <br><br>
+            <span class="p-5" style="color: aliceblue; " >Design and develop by- parimal.tbd@gmail.com</span>
+        </div>
+
     </div>
     
     <script src="js/main.js"></script>
