--- a/index.html
+++ b/index.html
@@ -10,27 +10,29 @@
     <div class="container">
         <nav class="navbar navbar-dark bg-dark d-flex">
             <h3 class="navbar-brand m-auto">Product Catalog</h3>
-            <input type="text" name="filter" id="filter" class="form-control m-3" placeholder="Filter here.........">
+            <input type="text" name="filter" id="filterInput" class="form-control m-3" placeholder="Filter here.........">
         </nav>
         <div class="card card-body">
-            <ul class="list-group" id="list-group">
-                <li class="list-group-item" id="list-item">
+            <ul class="list-group" id="productGroup">
+                <!---
+                <li class="list-group-item" id="product-0">
                     <strong>Mircrophone</strong>
                     <span>-$30</span>
                     <span class="float-right text-danger">X</span>
                 </li>
+                --->
             </ul>
             <form class="mt-4"> 
                 <div class="row">
                     <div class="col">
-                        <input type="text" placeholder="Product Name" class="form-control" id="product_name">
+                        <input type="text" placeholder="Product Name" class="form-control" id="productName">
                     </div>
                     <div class="col">
-                        <input type="text" placeholder="Product Price" class="form-control" id="product_price">
+                        <input type="text" placeholder="Product Price" class="form-control" id="productPrice">
                     </div>
                 </div>
             </form>
-            <button class="btn btn-primary mt-2" id="btn-submit">Submit</button>
+            <button class="btn btn-primary mt-2" id="btnSubmit">Submit</button>
             <div class="card card-body mt-5">
                 <div class="row">
                     <div class="col">
