insert filter delete done to main.js file

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <input type="text" name="filter" id="filterInput" class="form-control m-3" placeholder="Filter here.........">
         </nav>
         <div class="card card-body">
+            <span class="text-danger" id="msg"></span>
             <ul class="list-group" id="productGroup">
                 <!---
                 <li class="list-group-item" id="product-0">
