--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
             <div class="card card-body mt-5">
                 <div class="row">
                     <div class="col">
-                        <strong class="float-right">Choose Theme</strong>
+                        <strong class="float-right">Choose Background:</strong>
                     </div>
                     <div class="col">
-                        <span style="background-color: #3E362F; border-radius: 6px;"><input class="radio-inline m-2" type="radio" name="inlineRadioOptions" id="radioOne" value="option1"></span>
-                        <span style="background-color: #A16F5C; border-radius: 6px;"><input class="radio-inline m-2" type="radio" name="inlineRadioOptions" id="radioTwo" value="option2"></span>
-                        <span style="background-color: #D5EBDA; border-radius: 6px;"><input class="radio-inline m-2" type="radio" name="inlineRadioOptions" id="radioThree" value="option3"></span>
+                        <span style="background-color: #0677A3; border-radius: 6px;"><input class="radio-inline m-2" type="radio" name="inlineRadioOptions" id="radioOne" value="option1"></span>
+                        <span style="background-color: #917164; border-radius: 6px;"><input class="radio-inline m-2" type="radio" name="inlineRadioOptions" id="radioTwo" value="option2"></span>
+                        <span style="background-color: #8D2F23; border-radius: 6px;"><input class="radio-inline m-2" type="radio" name="inlineRadioOptions" id="radioThree" value="option3"></span>
                     </div>
                 </div>
             </div>
